--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+#Client ID
+#515256168393-b91vap7j22eiui78us4mnq1j15o2vh4c.apps.googleusercontent.com
+#Client secret
+#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
+server.error.whitelabel.enabled=false
+server.error.path=/error
+spring.datasource.url=jdbc:mysql://emp.fulgentcorp.com/benjamin?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=benjamin
+spring.datasource.password=MPvWo6O7GNVNAOMe
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
