--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@
 #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
 server.error.whitelabel.enabled=false
 server.error.path=/error
-spring.datasource.url=jdbc:mysql://emp.fulgentcorp.com/benjamin?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=benjamin
-spring.datasource.password=MPvWo6O7GNVNAOMe
+spring.datasource.url=jdbc:mysql://emp.fulgentcorp.com/block403?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=block403
+spring.datasource.password=cypher
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
