--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 /src/main/resources/static/js/private_constants.js
+/src/main/resources/application.properties
 ### STS ###
 .apt_generated
 .classpath
